# rag-from-scratch

./: .gitignore  README.md  pyproject.toml
data/docs/: backend.md  rag_overview.md  strategies.md
src/rag_from_scratch/: __init__.py  api.py  config.py  embeddings.py  generation.py  loader.py  main.py  models.py  pipeline.py  rerank.py  retrieval.py  text_processing.py  vectorstore.py
tests/: test_pipeline.py
