[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-from-scratch"
version = "0.1.0"
description = "Ground-up Retrieval Augmented Generation service built with Python, LangChain, FastAPI, and Chroma."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "langchain>=0.2,<0.4",
  "langchain-core>=0.2,<0.4",
  "langchain-community>=0.2,<0.4",
  "langchain-openai>=0.1,<0.4",
  "langchain-chroma>=0.1,<0.3",
  "chromadb>=0.5,<0.7",
  "scikit-learn>=1.4,<2.0",
  "numpy>=1.26,<3.0",
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.3,<3.0",
  "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "httpx>=0.27,<1.0",
]

[project.scripts]
rag-from-scratch = "rag_from_scratch.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
